- horizontalstate.rb, stateproprieties.rb: (Not)MovingStateProprieties
  renamed to (Not)MovingState
- vikingstate.rb: removed (after moving Abilities to horizontal state
  VikingState is the same as SophisticatedSpriteState)
- sophisticatedspritestate.rb: added method 'to_s'
- model files and images of vikings: all mirrored images facing right removed
  (generated programmatically)

[7.February 2009]
- viking.rb: Viking#heal made more general
- entities/apple.rb: updated because of change in Viking#heal
- gfx/healingpotion.png: new image by Magnus
- entities/healingpotion.rb: 'superhealing' item
- level ManyItems (IMYI): added HealingPotions
- entities/bear.rb: removed useless superclass; removed use 
  of SophisticatedSpriteState
- level Arctic Tutorial (ATUT): fixed some constant references
- sprinter.rb: favourite colour changed to blue
- sprinter.rb, warior.rb, shielder.rb: init_images public, called as in all
  normal Entities from Entity#initialize
- horizontalstate.rb, sophisticatedspritestate.rb, vikingstate.rb, viking.rb:
  slowly progressing towards new VikingState: horizontal direction isn't
  connected with VikingState

[5.February 2009]
- tests/test.rb: removed requirement of tests of compiled extensions;
  added requirement of some files returned from SchwerEngine
- tests/testvikingstate.rb: empty TestSuite removed
- freevikings.rb: I found that option -d works with milliseconds,
  but configfile's entry 'frame delay' with seconds - and changed cmdline
  option to accept seconds too.
- framelimitter.rb: unit for automatic frame limitting (and fps computation)
- fvdef.rb: constant defining maximum fps before game behaves strange
- game.rb: added FrameLimitter
- config/structure.conf, config/defaults.conf, config/config.rb,
  game.rb: extended frame delay setup in configuration file
- viking.rb: removed useless 'protected' (only instance methods can be 
  protected)
  removed inclusion of SophisticatedSpriteMixins::Walking