@@ -4,6 +4,8 @@
 # Trida na miru pro Erika. Sprinter umi rychle behat a skakat, hlavou
 # muze rozbijet zdi.
 
+require 'wall.rb'
+
 module FreeVikings
 
   class Sprinter < Viking
@@ -26,6 +28,7 @@ module FreeVikings
     def space_func_on
       return if not @state.on_ground?
       return if @state.knocked_out?
+      return if @state.horizontal_state.is_a?(BullHeadState)
 
       @state.rise
       @jump_start_y = @rect.bottom unless @jump_start_y
@@ -38,9 +41,20 @@ module FreeVikings
       @jump_start_y = nil
     end
 
+    def d_func_on
+      return unless @state.moving_horizontally?
+      @state.horizontal_state = BullHeadState.new(@state)
+    end
+
+    def d_func_off
+      return unless @state.horizontal_state.is_a?(BullHeadState)
+      @state.stop
+    end
+
     alias_method :_update, :update
 
     def update
+      update_bullhead
       _update
       if not @jump_start_y.nil?
         # Nasledujici podminka ma smysl pouze ve svete, kde osa y ma nulu 
@@ -56,6 +70,20 @@ module FreeVikings
       @image = Model.load_new(File.open(FreeVikings::GFX_DIR+'/models/erik_model.xml'))
 
       @portrait = Portrait.new 'erik_face.tga', 'erik_face_unactive.gif', 'dead_face.png'
+    end
+
+    private
+
+    def update_bullhead
+      return unless @state.horizontal_state.is_a?(BullHeadState)
+
+      @location.static_objects_on_rect(@rect).each {|o|
+        if o.is_a?(Wall) then
+          o.bash
+          d_func_off
+          break
+        end
+      }
     end
   end # class
 end # module
